[package]
name = "dominance-ord"
version = "0.1.0"
authors = ["Michael Neumann <mneumann@ntecs.de>"]
license = "MIT"
repository = "https://github.com/mneumann/dominance-ord-rs"
description = "Dominance order trait"
keywords = ["dominance", "domination", "pareto"]

include = ["src/lib.rs", "src/tests.rb", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
